--- a/md3/Quiz/quizpage2.html
+++ b/md3/Quiz/quizpage2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="quizstyling.css">
+    <link rel="stylesheet" href="jsfile.js">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
             <div>
                 <div id="content">
                     <div class="titlebox">
-                        <b>Learning by doing</b>
+                        <b>BTS X ARMY Quiz</b>
                     </div>
                                     <div class = "inner">
                 <div class="text">
@@ -32,7 +33,8 @@
                             
                         </div>
                         <div class="col-lg-10">
-                            <span>Who is the leader of BTS? <br>
+                            <span> Which song is the word "Bultourane"? <br>
+                                <button class="btn btn-warning" style="float: right;">Click here for some hints baby!!! </button>
                                 <br>
                             <div class="row">
                                 <div class="col-lg-2">
@@ -47,22 +49,27 @@
                             <i class="fas fa-angle-right" style="float: right;"></i>
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                         </div>
-                            <input type="radio" name="q1" value="park Jimin"> Park Jimin<br>
-                            <input type="radio" name="q1" value="Jeon Jungkook"> Jeon Jungkook<br>
-                            <input type="radio" name="q1" value="Kim Taehyung"> Kim Taehyung<br>
-                            <input type="radio" name="q1" value="kim Namjoon"> Kim Namjoon 
+                            <input type="radio" name="q3" value="Outro: Her"> Outro: Her<br>
+                            <input type="radio" name="q3" value="Dope"> Dope<br>
+                            <input type="radio" name="q3" value="Fire"> Fire<br>
+                            <input type="radio" name="q3" value="IDOL"> IDOL 
                         </span><br>
                         <br>
                         <div class="alert alert-success">
-                            <strong>Correct!</strong> Kim Namjoon is the leader of BTS.
+                            <strong>Correct!</strong> Fire!! 🔥 That is the song!!!
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                         </div>
                         <div class="alert alert-danger">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <strong>Incorrect!</strong>
+                            <strong>Incorrect! What are you doing??? Give me the crct answer 😡</strong>
                         </div>
+                        <button class="btn btn-dark" style="float: right;">Submit!</button>
+                        <br>
+                        <br>
                         <hr>
-                        <span>In which year did the album "WINGS" release? <br>
+                        <span>What is the recent drama that V acked in? <br>
+                            <button class="btn btn-warning" style="float: right;">Click here for some hints baby!!! </button>
+                            <br>
                             <div class="row">
                                 <div class="col-lg-2">
                                     <div class="speech-bubble">
@@ -76,20 +83,22 @@
                                 <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
                                 <i class="fas fa-angle-right" style="float: right;"></i>
                             </div>
-                            <input type="radio" name="q2" value="2016"> 2016<br>
-                            <input type="radio" name="q2" value="2013"> 2013<br>
-                            <input type="radio" name="q2" value="2018"> 2018<br>
-                            <input type="radio" name="q2" value="2014"> 2014 
+                            <input type="radio" name="q4" value="While you were sleeping"> While you were sleeping<br>
+                            <input type="radio" name="q4" value="Hwarang"> Hwarang<br>
+                            <input type="radio" name="q4" value="Memories of alhamba"> Memories of alhamba<br>
+                            <input type="radio" name="q4" value="Run BTS"> Run BTS 
                         </span><br>
                         <br>
                         <div class="alert alert-success">
-                            <strong>Correct!</strong> 2016 is the year in which WINGS is realsed.
+                            <strong>Correct!</strong> You are right!! How can we forget Hwarang's Hansung!!! 😉
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                         </div>
                         <div class="alert alert-danger">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <strong>Incorrect!</strong>
+                            <strong>Incorrect! What are you doing??? Give me the crct answer 😡</strong>
                         </div>
+                        <button class="btn btn-dark" style="float: right;">Submit!</button>
+                        <br>
                         <!-- <span>3. Which song is the word "Bultourane"? <br>
                             <div class="alert alert-warning">
                                 <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
@@ -127,7 +136,12 @@
                         <br>
                     </div>
                 </div>
-                <span class="reset">Reset this activity</span>
+                <div class="reset">
+                   <button class="btn btn-light" style="color: #1a73e8">Reset this activity</button> 
+                </div>
+                
+                <!-- <a href="quizpage1.html" class="reset">Reset this activity</a> -->
+                <!-- <span class="reset">Reset this activity</span> -->
             </div>
 
                 </div>
