--- a/md4/Assignment - 1/homepage.html
+++ b/md4/Assignment - 1/homepage.html
@@ -13,13 +13,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script type="text/javascript">
-        // function redirect() {
-        //     document.getElementById("content").style.display = "none";
-        //     var page = url('quizpage1.html');
-        //     window.location.href = page;
-        // }
-    </script>
     <div class = "container">
         <div id="content">
             <div class="titlebox">
@@ -27,19 +20,23 @@
             </div>
             <div class = "inner">
                 <img src="jimin.jpg">
-                <img src="grp.jpg" alt="grp">
+                <img src="grp.jpg" alt="grp" style="float: right">
+                <br>
+                <br>
+                <br>
                 <br>
                 <br>
                 <h1 class = "header" style="color: #1a73e8;">
                     Welcome to Quiz!!!
                 </h1>
-                <a href="quizpage1.html"><button class = "btn btn-primary" type="submit" style="margin-left: 45%; margin-right: 50%; margin-bottom: 3%" onclick="redirect()">
+                <a href="quizpage.html"><button class = "btn btn-primary" type="submit" style="margin-left: 45%; margin-right: 50%; margin-bottom: 3%">
                     <b>Start Quiz!!</b>
                 </button></a>
                 <img src="bts.jpg" alt = "bts" style="margin-right: 10%" >
-                <img src="jk.jpg" alt="jk" class="img" >
+                <img src="jk.jpg" alt="jk" class="img" style="flo" >
             </div>
         </div>
     </div>
+    <script type="text/javascript" src = "quizoper.js"></script>
 </body>
 </html>
