--- a/md2/A1.html
+++ b/md2/A1.html
@@ -3,7 +3,6 @@
 <head>
     <title> a1</title>
     <meta charset="utf-8">
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -11,7 +10,7 @@
 </head>
 <body background="background.jpg">
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top: 10%;">
             <div class="col-lg-4">
                 <img src="Photo .jpg" alt = "my photo" class="img-responsive" width = "200px" height="200px">
                 <h4 style="font-family: Times New Roman; font-size: 150%; text-align: left; color: white">Contact Info:</h4>
